--- a/NeolithicFightingTrials/index.html
+++ b/NeolithicFightingTrials/index.html
@@ -3,16 +3,51 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Vanilla Boilerplate</title>
+    <style>
+      .topnav-centered a {
+        float: none;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+      }
+      canvas {
+        display: block;
+        margin: auto;
+      }
+      body {
+        background-image: url('nftFighter.png');
+      }
+    </style>
+    <title>Neolithic Fighting Trials</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/web3@latest/dist/web3.min.js"></script>
     <script src="https://unpkg.com/moralis/dist/moralis.js"></script>
     <script src="//cdn.jsdelivr.net/npm/phaser@3.55.2/dist/phaser.min.js"></script>
   </head>
 
   <body>
-    <button id="btn-login">Moralis Metamask Login</button>
-    <button id="btn-logout">Logout</button>
+
+    <nav class="navbar navbar-light bg-light">
+      <div class="topnav-centered">
+        <a class="navbar-brand mb-0 ">Neolithic Fighting Trials</a>
+      </div>
+      <div class="d-flex justify-content-end" >
+        <div class="btn-toolbar justify-content-between">
+          <div class="btn-group-lg">
+            <button id="btn-login" class="btn btn-success">Moralis Metamask Login</button>
+          </div>
+          <div class="btn-group-lg">
+            <button id="btn-logout" class="btn btn-success">Logout</button>
+          </div>
+        </div>
+      </div>
+    </nav>
     <br><br>
-    <script type="text/javascript" src="./main.js"></script>
+    <div class="canvas">
+      <script type="text/javascript" src="./main.js"></script>
+    </div>
+    
   </body>
 </html>
